cd: add ngnx configuration

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,7 +30,7 @@ jobs:
       # Construye y etiqueta la imagen
       - name: Build Docker Image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/quizz-cloud-front:${{ github.ref_name }} .
+          docker build --build-arg VITE_API_URL=/api -t ghcr.io/${{ github.repository }}/quizz-cloud-front:${{ github.ref_name }} .
 
       # Publica la imagen en GHCR
       - name: Push Docker Image
